syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.maurigvs.bank.grpc";
option java_outer_classname = "CustomerProto";

package grpc;

service CustomerService {
    rpc FindByTaxId(FindCustomerRequest) returns (FindCustomerReply);
}

message CustomerData {
    int64 id = 1;
    string tax_id = 2;
}

message FindCustomerRequest {
    int64 id = 1;
    string tax_id = 2;
}

message FindCustomerReply {
    CustomerData customer_data = 1;
}
